<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/hint_description"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <TextView
        android:id="@+id/etDateStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/hint_leave_date"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/etDuration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/hint_duration"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/etCost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/hint_cost"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />
    
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip" >

        <Button
            android:id="@+id/btnChangeItinerary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#3DA5E1"
            android:onClick="changepasswordonClick"
            android:text="@string/btn_confirm_change"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancelItinerary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#3DA5E1"
            android:onClick="clickCheck"
            android:text="@string/btn_cancel_change"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>