<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    tools:context="com.halley.registeritinerary.RegisterAdvanceActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginBottom="5dp"
                android:text="Đăng kí bổ sung"
                android:textColor="@color/bg_login"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_description"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="2"
                android:minLines="2"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_start_addess"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="2"
                android:minLines="2"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_end_addess"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/endAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="2"
                android:minLines="2"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_distance"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_leave_date"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leave_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_leave_date"
                android:inputType="datetime"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_duration"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_duration"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/border_bottom"
                android:text="@string/hint_cost"
                android:textColor="#000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_cost"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <!-- Register Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/flat_selector"
                android:onClick="registerOnclick"
                android:text="@string/btn_register"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>